// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet with BCH balances 1`] = `
[
  <div
    className="sc-bYSBpT exMyWZ"
  >
    <div
      className="sc-kIPQKe btXAAR"
    >
      <h4
        className="sc-eXEjpC XDWfK"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        />
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-jtRfpW lemuei"
    >
      <span
        className="sc-kPVwWT gQZcUW"
      >
         
        0
         
        XEC
         
      </span>
    </div>
  </div>,
  <br />,
  <div
    className="sc-btzYZH hekFVg"
  >
    <div
      className="sc-iQKALj bMXeiW"
    >
      <div />
      <span
        aria-label="party emoji"
        role="img"
      >
        🎉
      </span>
      Congratulations on your new wallet!
       
      <span
        aria-label="party emoji"
        role="img"
      >
        🎉
      </span>
      <br />
       Start using the wallet immediately to receive
       
      XEC
       payments, or load it up with
       
      XEC
       to send to others
      <br />
      <br />
    </div>
  </div>,
]
`;

exports[`Wallet with BCH balances and tokens 1`] = `
[
  <div
    className="sc-bYSBpT exMyWZ"
  >
    <div
      className="sc-kIPQKe btXAAR"
    >
      <h4
        className="sc-eXEjpC XDWfK"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        />
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-jtRfpW lemuei"
    >
      <span
        className="sc-kPVwWT gQZcUW"
      >
         
        0
         
        XEC
         
      </span>
    </div>
  </div>,
  <br />,
  <div
    className="sc-btzYZH hekFVg"
  >
    <div
      className="sc-iQKALj bMXeiW"
    >
      <div />
      <span
        aria-label="party emoji"
        role="img"
      >
        🎉
      </span>
      Congratulations on your new wallet!
       
      <span
        aria-label="party emoji"
        role="img"
      >
        🎉
      </span>
      <br />
       Start using the wallet immediately to receive
       
      XEC
       payments, or load it up with
       
      XEC
       to send to others
      <br />
      <br />
    </div>
  </div>,
]
`;

exports[`Wallet with BCH balances and tokens and state field 1`] = `
[
  <div
    className="sc-bYSBpT exMyWZ"
  >
    <div
      className="sc-kIPQKe btXAAR"
    >
      <h4
        className="sc-eXEjpC XDWfK"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        />
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-jtRfpW lemuei"
    >
      <span
        className="sc-kPVwWT gQZcUW"
      >
         
        0.06
         
        XEC
         
      </span>
    </div>
  </div>,
  <br />,
  <div
    className="sc-btzYZH hekFVg"
  >
    <div
      className="sc-iQKALj bMXeiW"
    >
      <div />
      <span
        aria-label="party emoji"
        role="img"
      >
        🎉
      </span>
      Congratulations on your new wallet!
       
      <span
        aria-label="party emoji"
        role="img"
      >
        🎉
      </span>
      <br />
       Start using the wallet immediately to receive
       
      XEC
       payments, or load it up with
       
      XEC
       to send to others
      <br />
      <br />
    </div>
  </div>,
]
`;

exports[`Wallet without BCH balance 1`] = `
[
  <div
    className="sc-bYSBpT exMyWZ"
  >
    <div
      className="sc-kIPQKe btXAAR"
    >
      <h4
        className="sc-eXEjpC XDWfK"
      >
        MigrationTestAlpha
      </h4>
      <a
        href="/configure"
        onClick={[Function]}
      >
        <svg
          className="sc-jTzLTM bTdWCF"
        />
      </a>
      <div>
         
        <button
          aria-checked={false}
          className="ant-switch ant-switch-small"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="ant-switch-handle"
          />
          <span
            className="ant-switch-inner"
          >
            <svg
              className="sc-kAzzGY fUTkYj"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-jtRfpW lemuei"
    >
      <span
        className="sc-kPVwWT gQZcUW"
      >
         
        0
         
        XEC
         
      </span>
    </div>
  </div>,
  <br />,
  <div
    className="sc-btzYZH hekFVg"
  >
    <div
      className="sc-iQKALj bMXeiW"
    >
      <div />
      <span
        aria-label="party emoji"
        role="img"
      >
        🎉
      </span>
      Congratulations on your new wallet!
       
      <span
        aria-label="party emoji"
        role="img"
      >
        🎉
      </span>
      <br />
       Start using the wallet immediately to receive
       
      XEC
       payments, or load it up with
       
      XEC
       to send to others
      <br />
      <br />
    </div>
  </div>,
]
`;

exports[`Without wallet defined 1`] = `
<div
  className="sc-iRbamj eFjXsW"
>
  <h2>
    Welcome to Cashtab!
  </h2>
  <p
    className="sc-jlyJG fbMjuz"
  >
    Cashtab is an
     
    <a
      className="sc-gipzik jWnIKY"
      href="https://github.com/bitcoin-abc/bitcoin-abc"
      rel="noreferrer"
      target="_blank"
    >
      open source,
    </a>
     
    non-custodial web wallet for 
    eCash
    .
  </p>
  <button
    className="sc-cMljjf jWjHRF"
    onClick={[Function]}
  >
    <span
      aria-label="plus-square"
      className="anticon anticon-plus-square"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="plus-square"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
        />
        <path
          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
        />
      </svg>
    </span>
     New Wallet
  </button>
  <button
    className="sc-jAaTju itEcMR"
    onClick={[Function]}
  >
    <span
      aria-label="import"
      className="anticon anticon-import"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="import"
        fill="currentColor"
        fillRule="evenodd"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 912H144c-17.7 0-32-14.3-32-32V144c0-17.7 14.3-32 32-32h360c4.4 0 8 3.6 8 8v56c0 4.4-3.6 8-8 8H184v656h656V520c0-4.4 3.6-8 8-8h56c4.4 0 8 3.6 8 8v360c0 17.7-14.3 32-32 32zM653.3 424.6l52.2 52.2a8.01 8.01 0 01-4.7 13.6l-179.4 21c-5.1.6-9.5-3.7-8.9-8.9l21-179.4c.8-6.6 8.9-9.4 13.6-4.7l52.4 52.4 256.2-256.2c3.1-3.1 8.2-3.1 11.3 0l42.4 42.4c3.1 3.1 3.1 8.2 0 11.3L653.3 424.6z"
        />
      </svg>
    </span>
     Import Wallet
  </button>
</div>
`;
